crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__track_selection_long_list_120x40.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: contents
---
quickbridge v0.1.0                                                                                                      
                                                                                                                        
                                                                                                                        
Source                                                                                                                  
Enter a direct media URL below                                                                                          
                                                                                                                        
Activity                                                                                                                
No activity yet.                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Audio                                                                                                                   
  Unknown language • AAC • default                                                                                      
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
  Unknown language • AAC                                                                                                
› Unknown language • AAC                                                                                                
╭ Input ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Use ↑ or ↓ to select a track, then press Enter                                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
↑↓ choose  •  Enter play  •  Tab switch
