crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__track_selection_screen_120x40.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: "render_contents_with_size(&state, 120, 40)"
---
quickbridge v0.1.0                                                                                                      
                                                                                                                        
                                                                                                                        
Source                                                                                                                  
https://example.com/video.mkv                                                                                           
                                                                                                                        
Activity                                                                                                                
✓ Checked source URL                                                                                                    
✓ Time jumps are available                                                                                              
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Video                                                                                                                   
  H.264 • Unknown resolution • SDR • default                                                                            
› H.264 • Unknown resolution • SDR                                                                                      
                                                                                                                        
Audio                                                                                                                   
✓ Unknown language • AAC • default                                                                                      
                                                                                                                        
╭ Input ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Use ↑ or ↓ to select a track, then press Enter                                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
↑↓ choose  •  Enter audio
