crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__track_selection_screen_60x18.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: contents
---
quickbridge v0.1.0                                          
                                                            
                                                            
Source                                                      
https://example.com/video.mkv                               
                                                            
                                                            
Video                                                       
  H.264 • Unknown resolution • SDR • default                
✓ H.264 • Unknown resolution • SDR                          
                                                            
Audio                                                       
› Unknown language • AAC • default                          
                                                            
╭ Input ───────────────────────────────────────────────────╮
│Use ↑ or ↓ to select a track, then press Enter            │
╰──────────────────────────────────────────────────────────╯
↑↓ choose  •  Enter play  •  Tab switch
