crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__track_selection_screen_80x24.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
assertion_line: 546
expression: contents
---
quickbridge 0.1.0                                                               
                                                                                
Inspect source                                                                  
✓ Checked source URL                                                            
✓ Time jumps are available                                                      
                                                                                
Select tracks                                                                   
Video                                                                           
  Stream #0:0: Video: h264                                                      
> Stream #0:2: Video: hevc                                                      
                                                                                
Audio                                                                           
> Stream #0:1: Audio: aac                                                       
                                                                                
Arrow keys move • Enter confirm
